<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/inn"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardElevation="16sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:src="@drawable/money"/>
                <TextView
                    android:id="@+id/txv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/cont"
                    android:textSize="40sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:text="@string/out"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardElevation="16sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:src="@drawable/monney"/>
                <TextView
                    android:id="@+id/txv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/cont"
                    android:textSize="40sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="10sp"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            app:cardElevation="16sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:src="@drawable/monnney"/>
                <TextView
                    android:id="@+id/txv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/cont"
                    android:textSize="40sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginStart="10sp"
            android:text="@string/lista"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="20sp"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="90sp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/add"
        android:backgroundTint="@color/purple_700"
        android:foregroundTint="@color/purple_500"
        app:elevation="10sp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/minus"
            android:backgroundTint="@color/teal_700"
            android:foregroundTint="@color/purple_200"
            app:elevation="10sp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>