<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dis">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/out"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        app:cardElevation="16sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_margin="15sp"
                    android:src="@drawable/conncept"/>
                <EditText
                    android:id="@+id/txvD1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:hint="@string/con"
                    android:inputType="text"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_margin="15sp"
                    android:src="@drawable/calenndar"/>
                <TextView
                    android:id="@+id/txvD2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:hint="@string/dat"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/btnfech1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_marginStart="30sp"
                    android:backgroundTint="@color/purple_200"
                    android:text="@string/dat"
                    app:cornerRadius="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_margin="15sp"
                    android:src="@drawable/monney"/>
                <EditText
                    android:id="@+id/txvD3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:hint="@string/cont"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabdis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/check"
        android:backgroundTint="@color/teal_700"
        android:foregroundTint="@color/purple_200"
        app:elevation="10sp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabcdis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:layout_gravity="bottom"
        android:src="@drawable/cancel"
        android:backgroundTint="#cc0000"
        android:foregroundTint="@color/purple_200"
        app:elevation="10sp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>